# Triton-AI-Racer-ROS2

./: .gitignore  .gitmodules
.devcontainer/: Dockerfile  devcontainer.json
image_and_control/: image_and_control_0.db3  metadata.yaml
src/data_capture/: package.xml  setup.cfg  setup.py
src/data_capture/data_capture/: data_constants.py  image_and_control.py
src/data_capture/launch/: data_capture.launch.py
src/data_capture/params/: data_capture_config.yaml
src/data_read/: package.xml  setup.cfg  setup.py
src/data_read/data_read/: data_read_node.py
src/data_read/launch/: data_read.launch.py
src/data_reader/: config.py  package.xml  setup.py  tub_v2.py  types.py
src/data_reader/data_reader/: data_reader.py  data_reader_node.py
src/data_reader/launch/: data_reader.launch.py
src/data_reader/params/: data_reader_config.yaml
src/donkey_car/: package.xml  setup.cfg  setup.py
src/donkey_car/donkey_car/: donkey_car_calibrate_node.py  donkey_car_cnnactivation_node.py  donkey_car_createcar_node.py  donkey_car_createjs_node.py  donkey_car_findcar_node.py  donkey_car_makemovie_node.py  donkey_car_models_node.py  donkey_car_node.py  donkey_car_train_node.py  donkey_car_tubclean_node.py  donkey_car_tubhist_node.py  donkey_car_tubplo_node.py  donkey_car_ui_node.py  donkey_car_update_node.py
src/donkey_car/launch/: donkey_car.launch.py
src/donkey_car/params/: donkey_car_config.yaml
src/donkeycar_ros/: package.xml  setup.cfg  setup.py
src/donkeycar_ros/donkeycar_ros/: donkeycar_ros_node.py
src/donkeycar_ros/launch/: donkeycar_ros_node.launch.py
(+22 files in other folders)
